feat: add randon feature