@@ -22,6 +22,7 @@ test {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs += "--enable-preview"
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.withType(Test) {
@@ -30,4 +31,10 @@ tasks.withType(Test) {
 
 tasks.withType(JavaExec) {
     jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Jar) {
+    manifest {
+        attributes["Main-Class"] = "com.gabrielspassos.Main"
+    }
 }
